[package]
name = "zoom-alfred-workflow"
version = "0.1.0"
authors = ["Gerolf Seitz <gerolf.seitz@gmail.com>"]
edition = "2018"

[dependencies]
google-calendar3 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"
alfred = "^4.0.1"
chrono = "0.4.6"
time = "*"
regex = "1"
lazy_static = "*"
clap = "*"
itertools = "0.8.0"
dirs = "1.0.5"